cmake_minimum_required(VERSION 3.6)
project(Pandemic)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        IO_Files/city_input.txt
        IO_Files/currentEngine.txt
        IO_Files/currentMap.txt
        IO_Files/currentPlayers.txt
        IO_Files/epidemic_input.txt
        IO_Files/event_input.txt
        IO_Files/map_input.txt
        IO_Files/reference_input.txt
        IO_Files/role_input.txt
        IO_Files/welcome.txt
        Board.cpp
        Board.h
        BuildResearchStation.cpp
        BuildResearchStation.h
        Card.cpp
        Card.h
        CardType.cpp
        CardType.h
        CharterFlight.cpp
        CharterFlight.h
        City.cpp
        City.h
        CityVertex.cpp
        CityVertex.h
        ContigencyStrategy.cpp
        ContigencyStrategy.h
        Deck.cpp
        Deck.h
        DirectFlight.cpp
        DirectFlight.h
        DiscoverCure.cpp
        DiscoverCure.h
        DiseaseColour.cpp
        DiseaseColour.h
        DispatcherStrategy.cpp
        DispatcherStrategy.h
        DriveOrFerry.cpp
        DriveOrFerry.h
        Edge.cpp
        Edge.h
        Game.cpp
        Game.h
        GameBuilder.cpp
        GameBuilder.h
        Graph.cpp
        Graph.h
        Infection.cpp
        Infection.h
        Main.cpp
        MedicStrategy.cpp
        MedicStrategy.h
        OperationStrategy.cpp
        OperationStrategy.h
        PawnColour.cpp
        PawnColour.h
        Player.cpp
        Player.h
        ResearcherStrategy.cpp
        ResearcherStrategy.h
        RoleCard.cpp
        RoleCard.h
        SaveLoadDirector.cpp
        SaveLoadDirector.h
        ShareKnowledge.cpp
        ShareKnowledge.h
        ShuttleFlight.cpp
        ShuttleFlight.h
        Strategy.h
        TreatDisease.cpp
        TreatDisease.h
        TurnTaker.h
        Util.cpp
        Util.h
        Vertex.cpp
        Vertex.h)

add_executable(Pandemic ${SOURCE_FILES})